--- a/winter/ingress-2.yaml
+++ b/winter/ingress-2.yaml
@@ -6,20 +6,20 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
-  - host: kube-vote.info
+  - host: catvdog.info
     http:
       paths:
       - pathType: Prefix
         path: /vote
         backend:
-          service: 
-            name: vote
+          service:
+            name: voting-service
             port:
-              number: 5000
+              number: 30004
       - pathType: Prefix
         path: /result
         backend:
           service: 
-            name: result
+            name: result-service
             port:
-              number: 5001
+              number: 30005
