--- a/winter/worker.yaml
+++ b/winter/worker.yaml
@@ -17,5 +17,5 @@ spec:
     spec:    
       containers:
       - name: worker-app
-        image: docker.io/burrsutter/worker:java
+        image: docker.io/burrsutter/worker:java.1
         imagePullPolicy: Always
